--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pokemon Adoption App",
+  "name": "Pokemon_Adoption_App",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
